Cleaned up build.gradle to remove duplication