@@ -3,10 +3,6 @@ tasks.named('compileTestJava', JavaCompile) {
     options.compilerArgs << "-Xlint:deprecation"
 }
 
-test {
-    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED"
-}
-
 dependencies {
     api group: 'com.google.guava', name: 'guava', version: "${guavaVersion}"
     api ("org.apache.hadoop:hadoop-common:${hadoopVersion}"){
@@ -28,12 +24,6 @@ dependencies {
         exclude(group:'org.xerial.snappy')
         exclude(group:'io.netty')
     }
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
     testRuntimeOnly 'com.fasterxml.woodstox:woodstox-core:7.0.0'
     testRuntimeOnly 'org.slf4j:slf4j-api:2.0.16'
-}
-
-test {
-    useJUnitPlatform()
 }
